--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "config": "^1.20.2",
+    "hjson": "^1.8.4",
     "recursive-readdir-sync": "^1.0.6",
     "underscore": "^1.8.3"
   },
