--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "misty-config",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Cascading configuration with environment variable support",
   "main": "index.js",
   "scripts": {
@@ -15,9 +15,9 @@
   },
   "dependencies": {
     "config": "^1.20.2",
+    "js-yaml": "^3.6.1",
     "recursive-readdir-sync": "^1.0.6",
-    "underscore": "^1.8.3",
-    "yaml": "^0.3.0"
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "bodylabs-javascript-style": "^5.0.0",
