--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
   "dependencies": {
     "config": "^1.20.2",
     "js-yaml": "^3.6.1",
-    "recursive-readdir-sync": "^1.0.6",
-    "underscore": "^1.8.3"
+    "loader-utils": "^0.2.15",
+    "lodash": "^4.13.1",
+    "recursive-readdir-sync": "^1.0.6"
   },
   "devDependencies": {
     "bodylabs-javascript-style": "^5.0.0",
