--- a/package.json
+++ b/package.json
@@ -24,5 +24,5 @@
     "bodylabs-javascript-style": "^5.0.0",
     "jscs": "^2.11.0"
   },
-  "webpackLoader": "webpack-loader.js"
+  "webpackLoader": "loader/webpack-loader.js"
 }
